--- a/registro.html
+++ b/registro.html
@@ -35,7 +35,7 @@
                                 <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                             <div id="register-link" class="text-right">
-                                <a href="index.html" class="text-info"></a>Iniciar Sesion</a>
+                                <a href="index.html" class="text-info">Iniciar Sesion</a>
                             </div>
                         </form>
                     </div>
