modificado nav-bar

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Comunidad</a></li>
-                    <li><a href="#">Registarse</a></li>
+                    <li><a href="registro.html">Registarse</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
