--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
         <div class="header-content container">
-            <h1>Recetas de la comunidad fGreat</h1>
+           <!-- <h1>Recetas de la comunidad fGreat</h1>-->
             <p>
                 Bienvenidos a la comunidad fGreat, este espacio esta para todo aquel que le guste compartir su gastonomía
                 crear eventos para comer juntos, donde tu decides si quieres compartir tu receta o simplemente te quieres 
