--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
