--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
-                        <p align="center"><a href="http://www.securekart.in/" class="btn btn-primary btn-block">Open</a>
+                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
                         </p>
                     </div>
                 </div>
