--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <ul class="thumbnails">
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png"title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                   <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                   <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                          <h4>Header Name</h4>
                         <p>Description</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                        <h4>Header Name</h4>
                         <p>Description</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                     <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" alt="ALT NAME" class="img-responsive" />
+                     <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
@@ -97,7 +97,7 @@
             
             <div class="col-md-3 col-sm-3">
                 <div class="thumbnail">
-                    <img src="http://millennialchild.com/CDCatalog/Resources/ClassPlays_files/placeholder.png" alt="ALT NAME" class="img-responsive" />
+                    <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
                     <div class="caption">
                         <h4>Header Name</h4>
                         <p>Description</p>
