--- a/principal.html
+++ b/principal.html
@@ -13,102 +13,104 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
-<div class="container">
-        <div class="row">
-        <ul class="thumbnails">
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                    <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                         <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
-                        </p>
+<section>
+    <button id="lougout">Cerrar Sesion</button>
+    <div class="container">
+            <div class="row">
+            <ul class="thumbnails">
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
                     <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                         <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
-                        </p>
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                   <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                         <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
-                        </p>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
                         <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
-                        </p>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                        <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
-                        </p>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                       <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
-                        </p>
+                
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                     <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                        <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-md-3 col-sm-3">
-                <div class="thumbnail">
-                    <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
-                    <div class="caption">
-                        <h4>Header Name</h4>
-                        <p>Description</p>
-                        <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </ul>
+            </ul>
+        </div>
     </div>
-</div>
+</section>
    
 </body>
 </html>
