--- a/index.html
+++ b/index.html
@@ -1,44 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" src="style.css">
-
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fGreat</title>
+   <!-- <link rel="stylesheet" href="homestyle.css">  --> 
 </head>
 <body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="registro.html" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="registro.html" class="text-info">Register here</a>
-                            </div>
-                        </form>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+<section>
+    <button id="lougout">Cerrar Sesion</button>
+    <div class="container">
+            <div class="row">
+            <ul class="thumbnails">
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                    <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                        <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-3 col-sm-3">
+                    <div class="thumbnail">
+                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <div class="caption">
+                            <h4>Header Name</h4>
+                            <p>Description</p>
+                            <p align="center"><a href="#" class="btn btn-primary btn-block">Open</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </ul>
         </div>
     </div>
+</section>
+   
 </body>
 </html>
