--- a/registro.html
+++ b/registro.html
@@ -18,7 +18,7 @@
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
                         <form id="registro-form" class="form">
-                            <h3 class="text-center text-info">Login</h3>
+                            <h3 class="text-center text-info">Registro</h3>
                             <div class="form-group">
                                 <label for="username" class="text-info">Username:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
@@ -36,7 +36,7 @@
                                 <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                             <div id="register-link" class="text-right">
-                                <a href="registro.html" class="text-info">Register here</a>
+                                <a href="login.html" class="text-info">Register here</a>
                             </div>
                         </form>
                     </div>
