--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="imagenes/Hamburguesa.jpg" alt="ALT NAME" class="img-responsive" />
+                        <img src="/imagenes/fideuada.jpg" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
