--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="C:\Users\motar\OneDrive\Escritorio\WebSite\imagenes\fideuada.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
