--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="imagenes/Hamburguesa.jpg" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="imagenes/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
