--- a/registro.html
+++ b/registro.html
@@ -20,8 +20,8 @@
                         <form id="registro-form" class="form">
                             <h3 class="text-center text-info">Registro</h3>
                             <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
+                                <label for="username" class="text-info">E-mail:</label><br>
+                                <input type="email" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Password:</label><br>
