--- a/registro.html
+++ b/registro.html
@@ -36,7 +36,7 @@
                                 <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                             <div id="register-link" class="text-right">
-                                <a href="login.html" class="text-info">Register here</a>
+                                <a href="login.html" class="text-info">Ya tienes cuenta? ingresa aquí:</a>
                             </div>
                         </form>
                     </div>
