--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                                 <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                             <div id="register-link" class="text-right">
-                                <a href="registro.html" class="text-info">Registrate Aquí:</a>
+                                <a href="registro.html" class="text-info">Ya tienes cuenta? Registrate Aquí:</a>
                             </div>
                         </form>
                     </div>
