--- a/registro.html
+++ b/registro.html
@@ -8,7 +8,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fGreat</title>
 </head>
 <body>
     <div id="registro">
