agregado título home a index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fGreat</title>
+    <title>Home</title>
    <!-- <link rel="stylesheet" href="homestyle.css">  --> 
 </head>
 <body>
@@ -12,6 +12,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
+
 <section>
     <button id="lougout">Cerrar Sesion</button>
     <div class="container">
