--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <section>
-    <button id="lougout">Cerrar Sesion</button>
+    <button id="lougout">Cerrar Sesion</button><br>
     <div class="container">
             <div class="row">
             <ul class="thumbnails">
