titulo al index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <section>
+    <h1>Home</h1>
     <button id="lougout">Cerrar Sesion</button><br>
     <div class="container">
             <div class="row">
