se ha modificado las paginas

--- a/registro.html
+++ b/registro.html
@@ -11,38 +11,41 @@
     <title>fGreat</title>
 </head>
 <body>
-    <div id="registro">
-        <h3 class="text-center text-white pt-5">Registro</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="registro-form" class="form">
-                            <h3 class="text-center text-info">Registro</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">E-mail:</label><br>
-                                <input type="email" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="password" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Repita el Password:</label><br>
-                                <input type="password" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="login.html" class="text-info">Ya tienes cuenta? ingresa AQUI</a>
-                            </div>
-                        </form>
+    <section>
+        <div id="registro">
+            <h3 class="text-center text-white pt-5">Registro</h3>
+            <div class="container">
+                <div id="login-row" class="row justify-content-center align-items-center">
+                    <div id="login-column" class="col-md-6">
+                        <div id="login-box" class="col-md-12">
+                            <form id="registro-form" class="form">
+                                <h3 class="text-center text-info">Registro</h3>
+                                <div class="form-group">
+                                    <label for="username" class="text-info">E-mail:</label><br>
+                                    <input type="email" name="email" id="email" class="form-control" required autofocus>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="text-info">Password:</label><br>
+                                    <input type="password" name="password" id="password" class="form-control"required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="text-info">Repita el Password:</label><br>
+                                    <input type="password" name="password" id="password" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
+                                    <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                </div>
+                                <div id="register-link" class="text-right">
+                                    <a href="login.html" class="text-info">Ya tienes cuenta? ingresa AQUI</a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <script src="js/registro.js"></script>
 </body>
 </html>
