se ha añadido la nueva dirección del style css

--- a/registro.html
+++ b/registro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" src="css/style.css">
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
