se ha añadido la logica de almacenamiento en la store del navegador

--- a/registro.html
+++ b/registro.html
@@ -18,15 +18,15 @@
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
-                            <form id="registro-form" class="form">
+                            <form id="registroform" class="form">
                                 <h3 class="text-center text-info">Registro</h3>
                                 <div class="form-group">
                                     <label for="username" class="text-info">E-mail:</label><br>
-                                    <input type="email" name="email" id="email" class="form-control" required autofocus>
+                                    <input type="name" name="name" id="name" class="form-control" required autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="text-info">Password:</label><br>
-                                    <input type="password" name="password" id="password" class="form-control"required>
+                                    <label for="email" class="text-info">Password:</label><br>
+                                    <input type="email" name="email" id="email" class="form-control"required>
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="text-info">Repita el Password:</label><br>
