--- a/registro.html
+++ b/registro.html
@@ -22,7 +22,7 @@
                                 <h3 class="text-center text-info">Registro</h3>
                                 <div class="form-group">
                                     <label for="username" class="text-info">E-mail:</label><br>
-                                    <input type="name" name="name" id="name" class="form-control" required autofocus>
+                                    <input type="text" name="name" id="name" class="form-control" required autofocus>
                                 </div>
                                 <div class="form-group">
                                     <label for="email" class="text-info">Password:</label><br>
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                    <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                    <input type="submit" class="btn btn-info btn-md" value="submit">
                                 </div>
                                 <div id="register-link" class="text-right">
                                     <a href="login.html" class="text-info">Ya tienes cuenta? ingresa AQUI</a>
