--- a/registro.html
+++ b/registro.html
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                    <input type="submit" class="btn btn-info btn-md" value="submit">
+                                    <input type="submit" class="btn btn-info btn-md" value="registro">
                                 </div>
                                 <div id="register-link" class="text-right">
                                     <a href="login.html" class="text-info">Ya tienes cuenta? ingresa AQUI</a>
