--- a/registro.html
+++ b/registro.html
@@ -21,15 +21,15 @@
                             <form id="registroform" class="form">
                                 <h3 class="text-center text-info">Registro</h3>
                                 <div class="form-group">
-                                    <label for="username" class="text-info">E-mail:</label><br>
+                                    <label for="username" class="text-info">Nombre:</label><br>
                                     <input type="text" name="name" id="name" class="form-control" required autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <label for="email" class="text-info">Password:</label><br>
+                                    <label for="email" class="text-info">E-mail:</label><br>
                                     <input type="email" name="email" id="email" class="form-control"required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="text-info">Repita el Password:</label><br>
+                                    <label for="password" class="text-info">Password:</label><br>
                                     <input type="password" name="password" id="password" class="form-control" required>
                                 </div>
                                 <div class="form-group">
