--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
-                            <form id="login-form" class="form">
+                            <form id="loginform" class="form">
                                 <h3 class="text-center text-info">Login</h3>
                                 <div class="form-group">
                                     <label class="text-info">E-mail:</label><br>
