modificación de los input

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="imagenes/logoo.png" alt="ALT NAME" class="img-responsive" />
+                        <input type="image" name="" id="myImage">
+                        <img src="" alt="imagenes/logoo.png" id="myFile" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
