se ha añadido la funcion blob

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="row">
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
+                    
+                    <!-- se Esta añadiendo la imagen-->
+
                     <div class="thumbnail">
                         <input type="image" name="" id="myImage">
                         <img src="" alt="imagenes/logoo.png" id="myFile" class="img-responsive" />
