--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div class="row">
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
-                    
+
                     <!-- se Esta añadiendo la imagen-->
 
                     <div class="thumbnail">
                         <input type="image" name="" id="myImage">
-                        <img src="" alt="imagenes/logoo.png" id="myFile" class="img-responsive" />
+                        <img src="" alt="Selectiona una imagen" id="myFile" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
