--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <!-- se Esta añadiendo la imagen-->
 
                     <div class="thumbnail">
-                        <input type="image" name="" id="myImage">
+                        <input type="file" name="" id="myImage">
                         <img src="" alt="Selectiona una imagen" id="myFile" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
