--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage">
-                        <img src="" alt="Selectiona una imagen" id="myFile" class="img-responsive" />
+                        <img src="" alt="imagen" id="myFile" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
