--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             
                             inputFile.addEventListener("change", e=>{
                                 console.log(myImage.file)
-                                const blob = inputFile.inputFile[0]
+                                const blob = inputFile.file[0]
                                 myFile.src = URL.createObjectURL(blob)
                             })
                         </script>
