--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 </section>
-<script src="js/index.js"></script>
+<!--<script src="js/index.js"></script>-->
 <script src="js/app.js"></script>
    
 </body>
