--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <section>
     <h1>Home</h1>
-    <button id="logout" onclick="cerrarSerrion()" class="btn btn-primary">Cerrar Sesion</button><br>
+    <button id="logout" onclick="myFunction()" class="btn btn-primary">Cerrar Sesion</button><br>
     <div class="container">
             <div class="row">
             <ul class="thumbnails">
