--- a/registro.html
+++ b/registro.html
@@ -18,7 +18,7 @@
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
-                            <form id="registroform" class="form">
+                            <form id="signupFrom" class="form">
                                 <h3 class="text-center text-info">Registro</h3>
                                 <div class="form-group">
                                     <label for="username" class="text-info">Nombre:</label><br>
