--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-
+                    <form id="SubirImage">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage">
                         <img src="" alt="imagen" id="myFile" class="img-responsive" />
@@ -30,10 +30,11 @@
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="#" title="online shopping store For safety & secrity Products" class="btn btn-primary btn-block">Open</a>
+                            <p align="center"><a href="#" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Open</a>
                             </p>
                         </div>
                     </div>
+                </form>
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
