--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="#" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Open</a>
+                            <p align="center"><a href="app.js" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
                             </p>
                         </div>
                     </div>
