--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Home</h1>
     <button id="logout" class="btn btn-primary">Cerrar Sesion</button><br>
     <div class="container">
-            <div class="row">
+            <div class="row"><!--${validUser.name}-->
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
 
