--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                    <form id="SubirImage">
+                    <form id="SubirImage" method="post" enctype="multipart/form-data>
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage">
                         <img src="" alt="imagen" id="myFile" class="img-responsive" />
