insert name session

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                    <form action="imagenes/" method="post" enctype="multipart/form-data>
+                <form action="imagenes/" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage">
                         <img src="" alt="imagen" id="myFile" class="img-responsive" />
                        
-                        <div class="caption">
+                        <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
                             <p align="center"><a href="index.html" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
