añadimos formatos válidos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <!-- se Esta añadiendo la imagen-->
                 <form action="imagenes/" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
-                        <input type="file" name="" id="myImage">
+                        <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
                         <img src="" alt="imagen" id="myFile" class="img-responsive" />
                        
                         <div class="caption" value="+"´${validUser.name}´>
