añadido submit al  button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="index.html" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
+                            <p align="center"><a href="index.html" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
                             </p>
                         </div>
                     </div>
