--- a/registro.html
+++ b/registro.html
@@ -46,6 +46,6 @@
             </div>
         </div>
     </section>
-    <script src="js/registr.js"></script>
+    <script src="js/registro.js"></script>
 </body>
 </html>
