se ha añadido lib express multer path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                <form action="imagenes/" method="post" enctype="multipart/form-data">
+                <form action="public/imagenes/" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
                         <img src="" alt="imagen" id="myFile" class="img-responsive" />
@@ -30,7 +30,7 @@
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="index.html" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
+                            <p align="center"><a href="index.js" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
                             </p>
                         </div>
                     </div>
