--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                <form action="public/imagenes/fcbook.png" method="post" enctype="multipart/form-data">
+                <form action="../js/index.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
-                        <img src="" alt="imagen" id="myFile" class="img-responsive" />
+                        <img src="public/imagenes/fcbook.png" alt="imagen" id="myFile" class="img-responsive" />
                        
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
