--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <section>
     <h1>Home</h1>
-    <button id="#logout" class="btn btn-primary"action="../js/index.js">Cerrar Sesion</button><br>
+    <button id="logout" class="btn btn-primary"action="js/index.js">Cerrar Sesion</button><br>
     <div class="container">
             <div class="row"><!--${validUser.name}-->
             <ul class="thumbnails">
@@ -30,7 +30,7 @@
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="js/index.js" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
+                            <p align="center"><a href="#" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
                             </p>
                         </div>
                     </div>
