--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <form action="js/app.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
+                        <figure class="image_holder">
                         <img src="public/images/logoo.png" alt="imagen" id="myFile" class="img-responsive" />
-                       
+                        </figure>
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
